cabal-version:      2.4
name:               x03-text-in-transit
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Peter Holdsworth
maintainer:         peter.holdsworth@and.digital

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

-- executable x03-text-in-transit
executable scroll
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, ansi-terminal==0.11.4, directory==1.3.7.1
    hs-source-dirs:   app
    default-language: Haskell2010
