cabal-version:      2.4
name:               x03-text-in-transit
version:            0.1.0.0
author:             Peter Holdsworth
maintainer:         peter.holdsworth@and.digital
extra-source-files:
    CHANGELOG.md
    README.md

executable scroll
    main-is:          Main.hs
    build-depends:    
        base ^>=4.17.0.0, 
        ansi-terminal==0.11.4, 
        directory==1.3.7.1
    default-language: Haskell2010
